--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,6 @@
 }
 
 #frontend-admin-menu-icon {
-    -webkit-border-top-right-radius: 15px;
-    -webkit-border-bottom-right-radius: 15px;
-    -moz-border-radius-topright: 15px;
-    -moz-border-radius-bottomright: 15px;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
     background: rgb(232,180,118);
     background: -moz-linear-gradient(45deg,  rgba(232,180,118,1) 0%, rgba(234,129,0,1) 100%); 
     background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(232,180,118,1)), color-stop(100%,rgba(234,129,0,1))); 
@@ -23,7 +17,6 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8b476', endColorstr='#ea8100',GradientType=1 ); 
     text-align: right;
     padding: 10px;
-    color: #fff;
     position:relative;
     line-height: 5px;
 }
@@ -35,16 +28,9 @@
 #frontend-admin-menu-items {
     display: block;
     margin: -20px 0 0 0;
-    padding: 30px 0 50px 0;
-    -webkit-border-bottom-right-radius: 15px;
-    -webkit-border-bottom-left-radius: 15px;
-    -moz-border-radius-bottomright: 15px;
-    -moz-border-radius-bottomleft: 15px;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
+    padding: 20px 0 50px;
     overflow: auto;
     height: 100%;
-    background: #000;
     font-size: 16px;
     font-family: Arial;
 }
@@ -55,50 +41,97 @@
 
 #frontend-admin-menu-items ul li {
     width: 100%;
-    border-bottom: 1px solid #ccc;
     list-style-type: none;
-    padding: 0 0 0 10px;
+    color: #dddddd;
+    text-transform: uppercase;
+    display: block;
+    border-top: 1px solid #000000;
+    background: #222222;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    position: relative;
+}
+
+#frontend-admin-menu-items ul li:hover{
+    background: #000;
+    -webkit-transition: background-color 1000ms linear;
+    -moz-transition: background-color 1000ms linear;
+    -o-transition: background-color 1000ms linear;
+    -ms-transition: background-color 1000ms linear;
+    transition: background-color 1000ms linear;
 }
 
 #frontend-admin-menu-items ul li > * {
-  display: inline-block;
+  display: block;
   vertical-align: middle;
   width: auto;
 }  
 
 #frontend-admin-menu-items ul li > ul { 
     display: block;
+    background: #f1f1f1;
 }
 
+#frontend-admin-menu-items .frontend-admin-menu-menu > li > ul { 
+    border-bottom: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+}
+
+
 #frontend-admin-menu-items ul li a{
-    color: #fff;
-    padding: 5px 20px 5px 10px;
+    color: #dddddd;
+    padding: 10px 40px 10px 40px;
     text-decoration: none;
 }
 
-#frontend-admin-menu-items ul li a:hover {
-    color: #faac58;
+#frontend-admin-menu-items .sub-menu li {
+    background:none;
+    border-top: 1px solid #dddddd;
 }
 
-#frontend-admin-menu-items .sub-menu li {
-    border:0;
+#frontend-admin-menu-items .sub-menu li:hover {
+    background:#dddddd;
+    -webkit-transition: background-color 1000ms linear;
+    -moz-transition: background-color 1000ms linear;
+    -o-transition: background-color 1000ms linear;
+    -ms-transition: background-color 1000ms linear;
+    transition: background-color 1000ms linear;
+}
+
+#frontend-admin-menu-items .sub-menu li a{
+  color: #777777;
+  font-size:13px;
+}
+
+#frontend-admin-menu-items ul li .expand{
+    position: absolute;
+    left:0;
+    top:15px;
 }
 
 #frontend-admin-menu-items ul li .expand:hover {
     cursor:pointer;
 }
 
-#frontend-admin-menu-items .frontend-admin-menu-childen-icon-down {
+#frontend-admin-menu-items .menu-item-has-children .frontend-admin-menu-childen-icon-down {
     background: url("../images/arrow-down.png");
     background-position: left;
     background-repeat: no-repeat;
-    padding:5px 0px 5px 20px;
+    padding:10px 0 5px 15px;
+    margin: 0 0 0 10px;
 }
 
-#frontend-admin-menu-items .frontend-admin-menu-childen-icon-right {
+#frontend-admin-menu-items .menu-item-has-children .frontend-admin-menu-childen-icon-down:hover {
+    background: url("../images/arrow-down-hover.png");
+}
+
+#frontend-admin-menu-items .menu-item-has-children .frontend-admin-menu-childen-icon-right {
     background: url("../images/arrow-right.png");
     background-position: left;
     background-repeat: no-repeat;
-    padding:10px 0 5px 10px;
+    padding:10px 0 5px 15px;
+    margin: 0 0 0 10px;
 }
 
+#frontend-admin-menu-items .menu-item-has-children .frontend-admin-menu-childen-icon-right:hover {
+    background: url("../images/arrow-right-hover.png");
+}
