--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@
     background: #222222;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
     position: relative;
+    margin:0;
 }
 
 #frontend-admin-menu-items ul li:hover{
